[package]
name = "sasl2-sys"
authors = ["Materialize, Inc."]
readme = "../README.md"
description = "Bindings for Cyrus SASL."
documentation = "https://docs.rs/sasl2-sys"
repository = "https://github.com/MaterializeInc/rust-sasl"
license = "Apache-2.0"
categories = ["external-ffi-bindings"]
version = "0.1.6"
edition = "2018"
links = "sasl2"

[lib]

[[test]]
name = "plugins"
required-features = ["vendored"]

[dependencies]
libc = "0.2.68"

[dev-dependencies]
version-sync = "0.9"

[build-dependencies]
cc = "1.0.50"
duct = "0.13.3"
krb5-src = { version = "0.1.0", optional = true }
pkg-config = { version = "0.3.17", optional = true }

[features]
default = ["pkg-config"]
gssapi-vendored = ["krb5-src", "vendored"]
vendored = []

[package.metadata.docs.rs]
features = ["vendored"]
