[package]
name = "sasl2-sys"
authors = ["Materialize, Inc."]
readme = "../README.md"
description = "Bindings for Cyrus SASL."
documentation = "https://docs.rs/sasl2-sys"
repository = "https://github.com/MaterializeInc/rust-sasl"
license = "Apache-2.0"
categories = ["external-ffi-bindings"]
version = "0.1.22+2.1.28"
edition = "2018"
links = "sasl2"

[lib]

[[test]]
name = "plugins"
required-features = ["vendored"]

[dependencies]
krb5-src = { version = "0.3.0", optional = true }
libc = "0.2.68"
openssl-sys = { version = "0.9.55", optional = true }

[dev-dependencies]
version-sync = "0.9"

[build-dependencies]
cc = "1.0.50"
duct = "0.13.3"
pkg-config = { version = "0.3.17", optional = true }

[features]
default = ["pkg-config"]
gssapi-vendored = ["krb5-src", "vendored"]
openssl-vendored = ["openssl-sys/vendored"]
plain = ["vendored"]
scram = ["openssl-sys", "vendored"]
vendored = []

[package.metadata.docs.rs]
features = ["vendored"]
