[package]
name = "systest"
description = "ctest generator for sasl2-sys"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
libc = "0.2.68"
sasl2-sys = { path = "../sasl2-sys", default-features = false }

[build-dependencies]
ctest = "0.2"

[features]
pkg-config = ["sasl2-sys/pkg-config"]
vendored = ["sasl2-sys/vendored"]
